--- a/config.toml
+++ b/config.toml
@@ -2,20 +2,88 @@ baseURL = "https://learncodestream.github.io"
 languageCode = "en-gb"
 title = "Learn Code Stream"
 theme = "hugo-theme-techdoc"
-googleAnalytics = "G-NN4VBNXV6M" 
-
 # Required to get well formatted code blocks
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 disablePathToLower = true
 enableGitInfo = true
 
-[markup]
-  [markup.goldmark.renderer]
-    # Needed for mermaid shortcode
-    unsafe = true
-  [markup.tableOfContents]
-    startLevel = 1
-    endLevel = 9
 [params]
-    geekdocLogo = "images/vra-code-stream-logo.png"
+    logo = "/images/vra-code-stream-logo.png"
+
+    # Source Code repository section
+    # description = "put your description"
+    # github_repository = "https://github.com/learncodestream/learncodestream"
+
+    # Documentation repository section
+    # documentation repository (set edit link to documentation repository)
+    github_doc_repository = "https://github.com/learncodestream/learncodestream"
+    github_doc_branch = "main"
+
+    # Analytic section
+    google_analytics_id = "G-NN4VBNXV6M" # Your Google Analytics tracking id
+    tag_manager_container_id = "" # Your Google Tag Manager container id
+    google_site_verification = "" # Your Google Site Verification for Search Console
+
+    # Open Graph and Twitter Cards settings section
+    # Open Graph settings for each page are set on the front matter.
+    # See https://gohugo.io/templates/internal/#open-graph
+    # See https://gohugo.io/templates/internal/#twitter-cards
+    title = "Hugo Techdoc Theme"
+    images = ["images/og-image.png"] # Open graph images are placed in `static/images`
+
+    # Theme settings section
+    # Theme color
+    # See color value reference https://developer.mozilla.org/en-US/docs/Web/CSS/color
+    custom_font_color = "#0065ab"
+    custom_background_color = "#FFFFFF"
+
+    # Documentation Menu section
+    # Menu style settings
+    menu_style = "slide-menu" # "open-menu" or "slide-menu" or "" blank is as no sidebar
+
+    # Date format
+    dateformat = "" # default "2 Jan 2006"
+    # See the format reference https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
+
+    # path name excluded from documentation menu
+    menu_exclusion = [
+        "archives",
+        "archive",
+        "blog",
+        "entry",
+        "post",
+        "posts",
+    ]
+
+    # Algolia site search section
+    # See https://www.algolia.com/doc/
+    algolia_search_enable = false
+    algolia_indexName = "hugo-demo-techdoc"
+    algolia_appId = "7W4SAN4PLK"
+    algolia_apiKey = "cbf12a63ff72d9c5dc0c10c195cf9128" # Search-Only API Key
+
+# Global menu section
+# See https://gohugo.io/content-management/menus/
+# [menu]
+#     [[menu.main]]
+#         name = "Home"
+#         url = "/"
+#         weight = 1
+#     [[menu.main]]
+#         name = "Getting Started"
+#         url = "/Getting-Started/"
+#         weight = 2
+
+# Markup configure section
+# See https://gohugo.io/getting-started/configuration-markup/
+[markup]
+    defaultMarkdownHandler = "goldmark"
+    [markup.goldmark.renderer]
+        unsafe= true
+    [markup.tableOfContents]
+        startLevel = 2
+        endLevel = 6
+        ordered = false
+[outputs]
+    home = ["HTML", "RSS"]
