--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ enableGitInfo = true
     logo = "/images/vra-code-stream-logo.png"
 
     # Source Code repository section
-    # description = "put your description"
+    description = "put your description"
     # github_repository = "https://github.com/learncodestream/learncodestream"
 
     # Documentation repository section
