--- a/config.toml
+++ b/config.toml
@@ -29,8 +29,8 @@ enableGitInfo = true
     # Open Graph settings for each page are set on the front matter.
     # See https://gohugo.io/templates/internal/#open-graph
     # See https://gohugo.io/templates/internal/#twitter-cards
-    title = "Hugo Techdoc Theme"
-    images = ["images/og-image.png"] # Open graph images are placed in `static/images`
+    title = "Learn Code Stream"
+    images = ["/images/vra-code-stream-logo.png"] # Open graph images are placed in `static/images`
 
     # Theme settings section
     # Theme color
@@ -58,10 +58,10 @@ enableGitInfo = true
 
     # Algolia site search section
     # See https://www.algolia.com/doc/
-    algolia_search_enable = false
-    algolia_indexName = "hugo-demo-techdoc"
-    algolia_appId = "7W4SAN4PLK"
-    algolia_apiKey = "cbf12a63ff72d9c5dc0c10c195cf9128" # Search-Only API Key
+    # algolia_search_enable = false
+    # algolia_indexName = "hugo-demo-techdoc"
+    # algolia_appId = "7W4SAN4PLK"
+    # algolia_apiKey = "cbf12a63ff72d9c5dc0c10c195cf9128" # Search-Only API Key
 
 # Global menu section
 # See https://gohugo.io/content-management/menus/
